refator api url for events and try to make filter that checks postal code but it doesn't work yet
