# event-landvanons-api/routes/api.php
@@ -20,8 +20,13 @@ Route::middleware('auth:sanctum')->get('/users', function (Request $request) {
     return $request->user();
 });
 
-//Route::apiResource('events', [EventApiController::class]);
-Route::get('/events',  [EventApiController::class, 'show_events']);
-Route::get('/event/{id}',  [EventApiController::class, 'get_event']);
-Route::put('/events/{id}', [EventApiController::class, 'create_event']);
+Route::prefix('v1')->namespace('App\Http\Controllers\api')->group(function() {
+    Route::ApiResource('events' , EventApiController::class);
+});
+//Route::get('/events',  [EventApiController::class, 'show_events']);
+//Route::get('/event/{id}',  [EventApiController::class, 'get_event']);
+//Route::put('/events/{id}', [EventApiController::class, 'update_event']);
+//Route::post('/create/event', [EventApiController::class, 'create_event']);
+
+//https://www.youtube.com/watch?v=YGqCZjdgJJk
 
