# event-landvanons-api/storage/api-docs/api-docs.json
@@ -5,12 +5,12 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/api/events": {
+        "/api/v1/events": {
             "get": {
                 "tags": [
                     "Events"
                 ],
-                "summary": "Show Events",
+                "summary": "Show All Events",
                 "description": "Returns list of events",
                 "operationId": "showEvents",
                 "responses": {
@@ -24,16 +24,63 @@
                         "description": "Forbidden"
                     }
                 }
+            },
+            "post": {
+                "tags": [
+                    "Events"
+                ],
+                "summary": "Update Events",
+                "description": "Return a event by given id",
+                "operationId": "createEvent",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "event_name": {
+                                        "type": "string",
+                                        "example": "Updated event"
+                                    },
+                                    "begin_time": {
+                                        "type": "string",
+                                        "format": "date-time"
+                                    },
+                                    "end_time": {
+                                        "type": "string",
+                                        "format": "date-time"
+                                    },
+                                    "street_name": {
+                                        "type": "string",
+                                        "example": "Updated event"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
             }
         },
-        "/api/event/{id}": {
+        "/api/v1/events/{id}": {
             "get": {
                 "tags": [
                     "Events"
                 ],
-                "summary": "Show Events",
+                "summary": "Show Event",
                 "description": "Return a event by given id",
-                "operationId": "getEvent",
+                "operationId": "showEvent",
                 "parameters": [
                     {
                         "name": "id",
@@ -57,16 +104,14 @@
                         "description": "Forbidden"
                     }
                 }
-            }
-        },
-        "/api/events/{id}": {
+            },
             "put": {
                 "tags": [
                     "Events"
                 ],
                 "summary": "Update Events",
                 "description": "Return a event by given id",
-                "operationId": "createEvent",
+                "operationId": "updateEvent",
                 "parameters": [
                     {
                         "name": "id",
@@ -92,6 +137,14 @@
                                     "begin_time": {
                                         "type": "string",
                                         "format": "date-time"
+                                    },
+                                    "end_time": {
+                                        "type": "string",
+                                        "format": "date-time"
+                                    },
+                                    "street_name": {
+                                        "type": "string",
+                                        "example": "Updated event"
                                     }
                                 },
                                 "type": "object"
@@ -99,6 +152,37 @@
                         }
                     }
                 },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Events"
+                ],
+                "summary": "Deleting Event",
+                "description": "Return a event by given id",
+                "operationId": "deleteEvent",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Product Category ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "example": 1
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Successful operation"
